chapter1-basics/ping-pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-service
spec:
  selector:
    app: pingpong
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
